fixed the bug with fractional numbers

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 							<div class="proportions__values-column">
 								<div class="proportions__value-box">
 									<label for="value-1" data-lang="label">Enter the value</label>
-									<input class="proportions__value" id="value-1" type="number" value="" />
+									<input class="proportions__value" id="value-1" type="number" step="0.000001" value="" />
 								</div>
 								<div class="proportions__value-box">
-									<input class="proportions__value" id="value-2" type="number" value="" />
+									<input class="proportions__value" id="value-2" type="number" step="0.000001" value="" />
 									<label for="value-2" data-lang="label">Enter the value</label>
 								</div>
 							</div>
@@ -39,7 +39,7 @@
 							<div class="proportions__values-column">
 								<div class="proportions__value-box">
 									<label for="value-3" data-lang="label">Enter the value</label>
-									<input class="proportions__value" id="value-3" type="number" value="" />
+									<input class="proportions__value" id="value-3" type="number" step="0.000001" value="" />
 								</div>
 								<div class="proportions__value-box unknown--value">
 									<input class="proportions__value" id="value-4" type="text" value="" disabled />
